kubernetes-dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: dashboard-proxy
spec:
  rules:
  - host: dashboard.ops-work.net
    http:
      paths:
      - backend:
          serviceName: dashboard-proxy
          servicePort: 80
        path: /
  tls:
  - hosts:
    - dashboard.ops-work.net
    secretName: dashboard-proxy-tls
